dbug/dbug.c
@@ -1517,10 +1517,7 @@ void _db_end_()
   while ((discard= cs->stack))
   {
     if (discard == &init_settings)
-    {
-      FreeState (cs, discard, 0);
       break;
-    }
     cs->stack= discard->next;
     FreeState(cs, discard, 1);
   }
